--- a/style.css
+++ b/style.css
@@ -1,132 +1,484 @@
 /* Reset CSS */
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 /* Header */
 
 header {
-    background: url(./img/headerbg.jpg) 50% 80%/cover;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    padding: 0 30px 12px 30px;
+  background: url(./img/headerbg.jpg) 50% 80% / cover;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  padding: 0 30px 12px 30px;
 }
 
-nav>img {
-    width: 100px;
-    padding-top: 5px;
+nav > img {
+  width: 100px;
+  padding-top: 5px;
 }
 
 #menu {
-    padding: 0 0 10px 0;
-
+  padding: 0 0 10px 0;
 }
 
 #menu li a {
-    font: bold 1em "Proxima Nova";
-    color: #fff;
+  font: bold 1em "Proxima Nova";
+  color: #fff;
 }
 
 #search {
-    display: flex;
-    padding-top: 4px;
+  display: flex;
+  padding-top: 4px;
 }
 
 button img {
-    height: 15px;
+  height: 15px;
 }
 
 #search button,
 #search input {
-    background-color: rgba(256, 256, 256, 0.5);
-    border: 0;
-    padding: 8px 15px;
-    outline: none;
+  background-color: rgba(256, 256, 256, 0.5);
+  border: 0;
+  padding: 8px 15px;
+  outline: none;
 }
 
 #search button {
-    border-radius: 0 19px 19px 0;
+  border-radius: 0 19px 19px 0;
 }
 
 #search input {
-    border-radius: 19px 0 0 19px;
-    width: 150px;
+  border-radius: 19px 0 0 19px;
+  width: 150px;
 }
 
 h1 {
-    font: bold 2em Montserrat;
-    color: #fff;
-    margin-bottom: 10px;
+  font: bold 2em Montserrat;
+  color: #fff;
+  margin-bottom: 10px;
 }
 
 #mainhead button {
-    font: 1em "Proxima Nova";
-    color: #fff;
-    background-color: #53d153;
-    border: 0;
-    text-transform: uppercase;
-    border-radius: 26px;
-    padding: 10px 20px;
+  font: 1em "Proxima Nova";
+  color: #fff;
+  background-color: #53d153;
+  border: 0;
+  text-transform: uppercase;
+  border-radius: 26px;
+  padding: 10px 20px;
 }
 
-header>a {
-    background-color: rgba(256, 256, 256, 0.7);
-    padding: 6px 16px 6px 10px;
-    border-radius: 15px;
-    font: 1em "Proxima Nova";
-    color: #111;
-    width: 135px;
+header > a {
+  background-color: rgba(256, 256, 256, 0.7);
+  padding: 6px 16px 6px 10px;
+  border-radius: 15px;
+  font: 1em "Proxima Nova";
+  color: #111;
+  width: 135px;
+}
+
+section {
+  padding: 40px 0 60px 0;
+}
+
+section:nth-child(2) {
+  background-color: #54d154;
+}
+
+section:nth-child(4) {
+  background-color: #f2f1f1;
+}
+
+section:last-child {
+  background-color: #53d153;
+padding-bottom: 0;
+
+}
+
+section h2 {
+  font: 1.25em Montserrat;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  color: #828181;
+}
+
+section:nth-child(2) h2,
+section:nth-child(5) h2 {
+  color: #207b20;
+}
+
+section hr {
+  border: 0;
+  border-bottom: 2px solid #818181;
+  width: 43px;
+  margin: 10px auto;
+}
+
+section:nth-child(2) hr,
+section:nth-child(5) hr {
+  color: #1f7b1f;
+}
+
+section:nth-child(2) h6,
+section:nth-child(5) h6 {
+  color: #2b9b2b;
+}
+
+section h6 {
+  font: 1em "Open Sans";
+  color: #b7b3b3;
+  padding-bottom: 20px;
+}
+
+section h2,
+section h6 {
+  text-align: center;
+}
+
+.row {
+  /* background-color: yellow; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+article {
+  max-width: 280px;
+  text-align: center;
+  padding-top: 40px;
+}
+
+article i {
+  color: #53d153;
+  font-size: 3em;
+  padding: 30px;
+  background-color: #e0f3e0;
+  border-radius: 30px;
+}
+
+article h3 {
+  font: bold 1.5em "Proxima Nova";
+  color: #828181;
+  padding: 20px 0;
+}
+
+article p {
+  font: 1em Montserrat;
+  color: #828181;
+  padding-bottom: 25px;
+}
+
+article a {
+  font: bold 1em "Proxima Nova";
+  color: #fff;
+  padding: 8px 20px;
+  background-color: #53d153;
+  border-radius: 20px;
+  display: inline-block;
+}
+
+#btns {
+  display: flex;
+  justify-content: center;
+}
+
+#btns button {
+  background-color: #fff;
+  border: 1px solid #2b9b2b;
+  padding: 5px 12px;
+  font: 1em "Proxima Nova";
+  color: #2b9b2b;
+}
+
+#btns button:first-child {
+  border-radius: 20px 0 0 20px;
+  background-color: #2b9b2b;
+  color: #fff;
+}
+
+#btns button:last-child {
+  border-radius: 0 20px 20px 0;
+}
+
+#btns button:hover {
+  background-color: #2b9b2b;
+  color: #fff;
+}
+
+#fleximg {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 45px 0;
+}
+
+#fleximg img {
+  width: 100%;
+  max-width: 550px;
+  height: 50vh;
+  padding: 10px;
+}
+
+#text {
+  max-width: 720px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 55px auto 18px auto;
+}
+
+#text p,
+#text h3 {
+  font: 1em "Proxima Nova";
+  color: #444;
+}
+#text p:nth-child(2) {
+  max-width: 500px;
+  text-align: center;
+  margin: 0 20px 0;
+}
+
+#text i {
+  color: #e0dfdf;
+  font-size: 1.25em;
+}
+#ceo {
+  display: flex;
+  justify-content: center;
+}
+#ceopic {
+  width: 42px;
+  height: 42px;
+  border-radius: 21px;
+  background-color: #fff;
+  border: 2px solid #e1e1e1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 8px;
+}
+
+#ceo h3 {
+  font: 1em "Proxima Nova";
+  color: #444;
+  margin-bottom: 3px;
+}
+
+#ceo h5 {
+  font-size: bold 1em "Proxima Nova";
+  color: #ccc;
+}
+
+section #read {
+  font: bold 1em "Proxima Nova";
+  color: #fff;
+  padding: 8px 20px;
+  background-color: #2b9b2b;
+  border-radius: 20px;
+  display: block;
+  margin: auto;
+  width: 155px;
+}
+
+#icons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 800px;
+  margin: 47px 0 60px 0;
+}
+
+.fimg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  margin: 20px;
+}
+
+section #anchor {
+  font: 1.1em "Proxima Nova";
+  color: #a59d9d;
+  padding: 8px 20px;
+  background-color: #dddcdc;
+  border-radius: 20px;
+  display: block;
+  margin: auto;
+  width: 155px;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  max-width: 830px;
+  margin: auto;
+  flex-wrap: wrap;
+}
+.item {
+  max-width: 130px;
+  margin-right: 40px;
+}
+
+.circle {
+  width: 124px;
+  height: 124px;
+  border-radius: 62px;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.circle img {
+  width: 124px;
+  height: 124px;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: top;
+}
+
+#line {
+  width: 2px;
+  height: 77px;
+  background-color: #1f7b1f;
+}
+
+.item {
+  padding: 10px 0;
+}
+
+.item h5 {
+  font: 1em "Proxima Nova";
+  color: #ffffff;
+  text-align: center;
+  padding-bottom: 12px;
+}
+.socicons {
+  width: 84px;
+  height: 28px;
+  border-radius: 14px;
+  background-color: #c5e9c5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+
+.socicons i {
+  font-size: 20px;
+  color: #e94b89;
+  margin: 3px;
+}
+
+.socicons img {
+  width: 20px;
+  height: 20px;
+}
+
+#buttonddiv{
+    background-color: #3eba3e;
+    text-align: center;
+    margin-top: 40px;
+
+}
+
+#buttonddiv button {
+  font: 1em "Proxima Nova";
+  color: #fff;
+  background-color: #53d153;
+  border: 0;
+  text-transform: uppercase;
+  border-radius: 26px;
+  margin: 25px auto;
+  padding: 15px 20px;
 }
 
 /* Responsive Design */
 
 @media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 3.4em;
+  }
 
-    h1 {
-        font-size: 3.4em;
-    }
+  #mainhead button {
+    font-size: 1.4em;
+    border-radius: 28px;
+    padding: 14px 27px;
+  }
 
-    #mainhead button {
-        font-size: 1.4em;
-        border-radius: 28px;
-        padding: 14px 27px;
-    }
+  nav {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
 
-    nav {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        
-    }
+  #menu {
+    display: flex;
+    order: -1;
+  }
 
-    #menu {
-        display: flex;
-        order: -1;
+  #menu li {
+    margin-right: 18px;
+    margin-top: 10px;
+  }
 
-    }
+  #menu li:first-child {
+    border-top: 5px solid #53d153;
+    margin-top: 5px;
+  }
 
-    #menu li {
-        margin-right: 18px;
-        margin-top: 10px;
-    }
+  .row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    max-width: 1055px;
+    width: 100%;
+    margin: auto;
+  }
 
-    #menu li:first-child {
-        border-top: 5px solid #53d153;
-        margin-top: 5px;
-    }
+  article {
+    margin: 0 50px;
+  }
+
+  #btns button {
+    padding: 10px 20px;
+  }
+
+  #fleximg {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    max-width: 920px;
+  }
+
+  #fleximg img {
+    width: 160px;
+    height: 160px;
+    margin: 4px;
+  }
+
+  #icons {
+    margin: 30px auto 40px auto;
+  }
+  #icons .fimg {
+    max-width: 160px;
+  }
 }
